# hospital

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.hpp  route-manager.hpp
doc/route-manager/: route-manager.md
